route tested corrected issues connect route
