# apps/auth-service/src/controller/auth.controller.ts
@@ -1,13 +1,13 @@
 import { Request, Response, NextFunction } from "express";
 import { validateRegistrationData } from "../utils/auth.helper";
 import prisma from "./../../../../packages/libs/prisma/index";
-
 import {
   sendOTP,
   verifyOtp,
   trackOTPRequests,
   checkOTPrestrictions,
 } from "../utils/auth.helper";
+import bcrypt from "bcrypt";
 
 // register a new user
 export const userRegistration = async (
@@ -45,7 +45,6 @@ export const verifyUser = async (
 ) => {
   try {
     const { email, otp, password, name } = req.body;
-
     if (!email || !otp || !password || !name) {
       return next(new Error("all fields are required"));
     }
@@ -53,11 +52,27 @@ export const verifyUser = async (
     const existingUser = await prisma.users.findUnique({
       where: { email },
     });
+
     if (existingUser) {
       return next(new Error("Email already exists"));
     }
 
-    verifyOtp(email, otp, next);
+    //check for valid otp
+    await verifyOtp(email, otp, next);
+console.log("otp verified successfully");
+
+    const hashedPassword = await bcrypt.hash(password.toString(), 10); // Hash the password
+
+    console.log("hashedPassword", hashedPassword);
+
+    //write to db
+    const user = await prisma.users.create({
+      data: { name, email, password: hashedPassword },
+    });
+
+    console.log('created user', user);
+
+    res.status(201).send({ message: "User registered successfully", user });
   } catch (err) {
     next(err);
   }
