# apps/auth-service/src/swagger-output.json
@@ -22,10 +22,13 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "any"
+                  "example": "Rahim Badsa"
                 },
                 "email": {
-                  "example": "any"
+                  "example": "rahimbadsa723@gmail.com"
+                },
+                 "password": {
+                  "example": "12345678"
                 }
               }
             }
@@ -34,6 +37,39 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/verify-user": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "rahimbadsa723@gmail.com"
+                },
+                "otp": {
+                  "example": ""
+                },
+                "password": {
+                  "example": "1235678"
+                },
+                "name": {
+                  "example": "Rahim Badsa"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
           }
         }
       }
